--- a/kubernetes/apps/k0s/monitoring/grafana/app/dashboards.yaml
+++ b/kubernetes/apps/k0s/monitoring/grafana/app/dashboards.yaml
@@ -630,7 +630,7 @@ data:
       "uid": "CMlHQAuMz",
       "version": 1
     }
-  cloudnativepg.json: |
+  cloudnativepg.json: |-
     {
       "annotations": {
         "list": [
