--- a/kubernetes/apps/k0s/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/grafana/app/helmrelease.yaml
@@ -117,6 +117,9 @@ spec:
           gnetId: 5342
           revision: 9
           datasource: Prometheus
+        cloudnative-pg:
+          url: https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/main/docs/src/samples/monitoring/grafana-dashboard.json
+          datasource: Prometheus
         # Ref: https://grafana.com/grafana/dashboards/13502-minio-dashboard/
         minio:
           gnetId: 13502
